# game-engine

./: .clang-format  CMakeLists.txt  README.md  opengl-test.cpp
include/: camera.hpp  file.hpp  globals.hpp  keyboard.hpp  light.hpp  mouse.hpp  object.hpp  opengl-helpers.hpp  render.hpp  scene.hpp  transform.hpp
shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  camera.cpp  config.json  file.cpp  globals.cpp  keyboard.cpp  mouse.cpp  opengl-helpers.cpp  render.cpp  tiny.cpp  transform.cpp  ui.cpp
src/assets/: f1.mtl
src/include/: camera.hpp  config.hpp  file.hpp  globals.hpp  material.hpp  opengl-helpers.hpp  render.hpp  shader.hpp  ui.hpp  vertex-buffers.hpp
src/src/: camera.cpp  entry.cpp  globals.cpp  keyboard.cpp  mouse.cpp  opengl-helpers.cpp  render.cpp  ui.cpp
src/tests/cube-test/: CMakeLists.txt  config.json
src/tests/cube-test/include/: file.hpp  time.hpp
src/tests/cube-test/src/: config.cpp  entry.cpp  keyboard.cpp  opengl-helpers.cpp
src/tests/lighting-test/: CMakeLists.txt  config.json
src/tests/lighting-test/assets/: Formula_1_mesh.mtl
src/tests/lighting-test/include/: globals.hpp  keyboard.hpp  object.hpp  opengl-helpers.hpp  render.hpp
src/tests/lighting-test/src/: camera.cpp  mouse.cpp  opengl-helpers.cpp  shader.cpp
src/tests/obj-test/: CMakeLists.txt  config.json
src/tests/obj-test/include/: camera.hpp  file.hpp  globals.hpp  mouse.hpp  object.hpp  opengl-helpers.hpp  render.hpp
src/tests/obj-test/src/: camera.cpp  entry.cpp  file.cpp  globals.cpp  mouse.cpp  opengl-helpers.cpp  render.cpp  shader.cpp  time.cpp
src/tests/obj-texture-test/: CMakeLists.txt  config.json
src/tests/obj-texture-test/include/: camera.hpp  file.hpp  material.hpp  opengl-helpers.hpp  render.hpp  shader.hpp
src/tests/obj-texture-test/src/: config.cpp  entry.cpp  file.cpp  globals.cpp  opengl-helpers.cpp  render.cpp  shader.cpp
src/tests/opengl-test/: CMakeLists.txt  config.json
src/tests/opengl-test/include/: config.hpp  opengl-helpers.hpp
src/tests/opengl-test/shaders/: fragment.glsl
src/tests/opengl-test/src/: config.cpp  entry.cpp  file.cpp  opengl-helpers.cpp  shader.cpp
src/tests/quad-test/: CMakeLists.txt  config.json
src/tests/quad-test/include/: config.hpp  opengl-helpers.hpp  shader.hpp
src/tests/quad-test/src/: config.cpp  entry.cpp  opengl-helpers.cpp
src/tests/texture-test/: CMakeLists.txt
src/tests/texture-test/include/: config.hpp  file.hpp  opengl-helpers.hpp
src/tests/texture-test/shaders/: fragment.glsl  vertex.glsl
src/tests/texture-test/src/: entry.cpp  opengl-helpers.cpp
src/tests/transformation-test/: CMakeLists.txt
src/tests/transformation-test/include/: camera.hpp  config.hpp  globals.hpp  opengl-helpers.hpp  shader.hpp
src/tests/transformation-test/src/: camera.cpp  entry.cpp  globals.cpp  opengl-helpers.cpp
test/: opengl-test.cpp
tests/cube-test/: CMakeLists.txt  config.json
tests/cube-test/include/: camera.hpp  globals.hpp  opengl-helpers.hpp
tests/cube-test/src/: opengl-helpers.cpp
tests/lighting-test/: CMakeLists.txt
tests/lighting-test/include/: file.hpp  globals.hpp  opengl-helpers.hpp  shader.hpp
tests/lighting-test/shaders/: fragment.glsl
tests/lighting-test/src/: file.cpp  globals.cpp  keyboard.cpp  render.cpp
tests/obj-test/: CMakeLists.txt
tests/obj-test/include/: camera.hpp  file.hpp  globals.hpp  object.hpp  opengl-helpers.hpp  render.hpp
tests/obj-test/shaders/: fragment.glsl
tests/obj-test/src/: entry.cpp  file.cpp  globals.cpp  opengl-helpers.cpp  render.cpp  time.cpp
tests/obj-texture-test/: CMakeLists.txt
tests/obj-texture-test/include/: camera.hpp  config.hpp  material.hpp  object.hpp  render.hpp
tests/obj-texture-test/shaders/: vertex.glsl
tests/obj-texture-test/src/: opengl-helpers.cpp  render.cpp
tests/opengl-test/: CMakeLists.txt  entry.cpp
tests/opengl-test/include/: config.hpp  opengl-helpers.hpp
tests/opengl-test/shaders/: vertex.glsl
tests/opengl-test/src/: config.cpp  opengl-helpers.cpp
tests/quad-test/: CMakeLists.txt
tests/quad-test/include/: config.hpp  file.hpp  opengl-helpers.hpp  shader.hpp
tests/quad-test/src/: config.cpp  opengl-helpers.cpp
tests/texture-test/: CMakeLists.txt  config.json
tests/texture-test/include/: config.hpp  opengl-helpers.hpp
tests/texture-test/src/: file.cpp  opengl-helpers.cpp
tests/transformation-test/: CMakeLists.txt
tests/transformation-test/include/: config.hpp  file.hpp  mouse.hpp  shader.hpp  time.hpp
tests/transformation-test/shaders/: fragment.glsl
tests/transformation-test/src/: camera.cpp  config.cpp  entry.cpp  opengl-helpers.cpp
